--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ h3, .h03, h4, .h04 {
 	margin-bottom: 1.8rem;
 }
 h5, .h05, h6, .h06 {
-	font-family: "poppins-bold";
+	font-family: "Montserrat";
 	margin-bottom: 1.2rem;
 }
 h1, .h01 {
@@ -216,7 +216,7 @@ blockquote cite a, blockquote cite a:visited {
 	border: none;
 }
 abbr {
-	font-family: "poppins-bold", serif;
+	font-family: "Montserrat", serif;
 	font-variant: small-caps;
 	text-transform: lowercase;
 	letter-spacing: .05rem;
@@ -332,7 +332,7 @@ th, td {
 }
 th {
 	color: #313131;
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 }
 td {
 	line-height: 1.5;
@@ -598,7 +598,7 @@ select:focus {
 	border-bottom: 1px solid #FF0077;
 }
 label, legend {
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 1.4rem;
 	margin-bottom: .6rem;
 	color: #3b3b3b;
@@ -652,7 +652,7 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
 	display: inline-block;
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 1.4rem;
 	text-transform: uppercase;
 	letter-spacing: .3rem;
@@ -800,7 +800,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin: 0;
 	padding: 1.5rem .6rem 0 0;
 	font-size: 8.4rem;
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	line-height: 6rem;
 	text-indent: 0;
 	background: transparent;
@@ -920,7 +920,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .stats-tabs li a {
 	display: inline-block;
 	font-size: 2.5rem;
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	border: none;
 	color: #252525;
 }
@@ -955,11 +955,10 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	position: absolute;
 	left: 0;
 	top: -3rem;
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	color: #313131;
 	text-transform: uppercase;
-	letter-spacing: .2rem;
-	font-size: 1.5rem;
+	font-size: 0.9rem;
 	line-height: 2.4rem;
 }
 .skill-bars li .progress {
@@ -972,7 +971,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	right: 0;
 	top: -3.6rem;
 	display: block;
-	font-family: "poppins-regular", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	color: white;
 	font-size: 1.1rem;
 	line-height: 1;
@@ -1338,7 +1337,7 @@ header .logo a {
 }
 .intro-content h5 {
 	color: #cc005f;
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
 	margin-bottom: 0;
@@ -1522,7 +1521,7 @@ header .logo a {
 	margin-bottom: 3.6rem;
 }
 .about-content h3 {
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 1.8rem;
 	text-transform: uppercase;
 	letter-spacing: .25rem;
@@ -1536,7 +1535,7 @@ header .logo a {
 	margin-bottom: .6rem;
 }
 .about-content .info-list li strong {
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	color: #313131;
 	text-transform: uppercase;
 	letter-spacing: .2rem;
@@ -1908,7 +1907,7 @@ header .logo a {
 	padding: 1.8rem 3.6rem 3rem;
 }
 .popup-modal .description-box h4 {
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 1.5rem;
 	line-height: 2.4rem;
 	margin-bottom: .6rem;
@@ -1920,7 +1919,7 @@ header .logo a {
 	margin-bottom: 12px;
 }
 .popup-modal .categories {
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 1.1rem;
 	line-height: 1.8rem;
 	text-transform: uppercase;
@@ -1935,7 +1934,7 @@ header .logo a {
 	background: #000000;
 }
 .popup-modal .link-box a {
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 1.2rem;
 	line-height: 6rem;
 	color: #FFFFFF;
@@ -2300,7 +2299,7 @@ header .logo a {
 	clear: both;
 }
 #contact form .form-field label {
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 1.1rem;
 	line-height: 2.4rem;
 	position: absolute;
@@ -2397,7 +2396,7 @@ header .logo a {
 }
 #submit-loader .text-loader {
 	display: none;
-	font-family: "poppins-bold", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	color: #FFFFFF;
 	letter-spacing: .3rem;
 	text-transform: uppercase;
